src/Base/main/default/objects/Accrual_Tool_GLAccount_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Accrual_Type__c</fullName>
        <description>Type of GL Account for Accrual</description>
        <inlineHelpText>Type of GL Account for Accrual</inlineHelpText>
        <label>Accrual Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                    <default>true</default>
                    <label>Expense</label>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <description>Enter GL Account Name</description>
        <inlineHelpText>Enter GL Account Name</inlineHelpText>
        <label>GLAccount</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLV1__c</fullName>
        <description>Enter GLV1 Name</description>
        <inlineHelpText>Enter GLV1 Name</inlineHelpText>
        <label>GLV1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLV2__c</fullName>
        <description>Enter GLV2 Name</description>
        <inlineHelpText>Enter GLV2 Name</inlineHelpText>
        <label>GLV2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accrual Tool GLAccount Setting</label>
    <pluralLabel>Accrual Tool GLAccount Settings</pluralLabel>
</CustomObject>